Morning_Problems/MissingMulti/missing_multipliers-michaeltran14/test-cases/as-274-21-missing_multipliers.sh-test/Errors/000-stderr.txt
missing_multipliers.cpp: In function ‘void findproduct(int, long long int*, long long int*, int)’:
missing_multipliers.cpp:9:25: error: ‘n’ was not declared in this scope
    9 |     for (int i = 0; i < n; i++) {
      |                         ^
chmod: cannot access 'missing_multipliers': No such file or directory
/home/michaeltran14/CMPUT_275/C++/Morning_Problems/MissingMulti/missing_multipliers-michaeltran14/soln/.build/build.sh: line 8: ./missing_multipliers: No such file or directory

Expected file "test-cases/as-274-21-missing_multipliers.sh-test/Expected/000-stdout.txt" has no output file match
Expected file "test-cases/as-274-21-missing_multipliers.sh-test/Expected/000-stderr.txt" has no output file match
